--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-    "presets": ["es2015"],
-    "plugins": ["add-module-exports"]
+    "presets": [
+        "@babel/preset-env"
+    ],
+    "plugins": [
+        "babel-plugin-espower"
+    ]
 }
