--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "textlint-util-to-string": "^1.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.5.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "espower-babel": "^4.0.1",
-    "mocha": "^2.4.5",
+    "mocha": "^6.0.1",
     "power-assert": "^1.2.0",
     "textlint": "^5.2.1",
     "textlint-tester": "^0.4.1"
