--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,13 @@
 {
-    "presets": [
-        "@babel/preset-env"
-    ],
-    "plugins": [
-        "babel-plugin-espower"
-    ]
+  "presets": [
+    "@babel/preset-env"
+  ],
+  "plugins": [],
+  "env": {
+    "development": {
+      "presets": [
+        "power-assert"
+      ]
+    }
+  }
 }
