--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "espower-babel": "^4.0.1",
+    "babel-preset-power-assert": "^3.0.0",
+    "babel-register": "^6.26.0",
     "mocha": "^6.0.1",
-    "power-assert": "^1.2.0",
+    "power-assert": "^1.6.1",
     "textlint": "^5.2.1",
     "textlint-tester": "^0.4.1"
   },
