fix: 「カッコ」の中に区切り文字があっても、カウントがリセットされない問題を修正
「今日は早朝から出発したが、定刻には間に合わなかった。定刻には間に合わなかったが、無事会場に到着した」がエラーではなくなる

--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
   "bugs": {
     "url": "https://github.com/textlint-ja/textlint-rule-no-doubled-conjunctive-particle-ga/issues"
   },
-  "homepage": "https://github.com/textlint-ja/textlint-rule-no-doubled-conjunctive-particle-ga"
+  "homepage": "https://github.com/textlint-ja/textlint-rule-no-doubled-conjunctive-particle-ga",
+  "packageManager": "npm@9.2.0"
 }
