--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   ],
   "dependencies": {
     "kuromojin": "^3.0.0",
-    "sentence-splitter": "^3.2.1",
-    "textlint-rule-helper": "^2.2.0",
-    "textlint-util-to-string": "^3.1.1"
+    "sentence-splitter": "^5.0.0",
+    "textlint-rule-helper": "^2.3.1",
+    "textlint-util-to-string": "^3.3.4"
   },
   "devDependencies": {
-    "textlint-scripts": "^12.0.2",
-    "trim-newlines": ">=3.0.1"
+    "@textlint/types": "^13.4.1",
+    "textlint-scripts": "^13.4.1"
   },
   "scripts": {
     "build": "textlint-scripts build",
